# RustyDustyGutsyBins

./: .gitmodules  readme.md
DEternal_loadModsRust/: readme.md
EternalPatchManifestRust/: Cargo.toml  README.md
EternalPatchManifestRust/src/: eternal_patch_manifest.rs
EternalPatcher/: readme.md
idRehash/: reamde.md
idRehashRust/: Cargo.toml
idRehashRust/src/: main.rs
